# truealpha

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  init.md  moon.yml  pyproject.toml  toolchain.toml  vision.md
apps/backend/: alembic.ini  moon.yml  pyproject.toml
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 0001_initial_counter.py
apps/backend/src/: config.py  database.py  main.py
apps/backend/src/counter/: __init__.py
apps/backend/src/platform/: __init__.py
apps/backend/src/routers/: counter.py
apps/data-engine/: Dockerfile  dagster.yaml  pyproject.toml
apps/data-engine/dagster/: dagster.yaml  workspace.yaml
apps/data-engine/samples/: README.md  capture_manifest_20260712.json  strategy_coverage.json
apps/data-engine/samples/events/: DDOG_RATING_CORROBORATION_20260712.html  JPM_DIVIDEND_20250519.json  JPM_YAHOO_EVENTS_20250501_20250810.json  NVDA_YAHOO_EVENTS_20240501_20240701.json
apps/data-engine/samples/factor_matrix/: README.md  capture_plan.v1.json  capture_plan.v2.json
apps/data-engine/samples/filings/: ADM_10K_000000708426000011.html  DDOG_10K_000162828026008819.html  META_8K_SYMBOL_000132680122000070.html  NICE_20F_000100393526000010.html  NVDA_8K_GUIDANCE_000104581024000113.html  NVDA_8K_SPLIT_000104581024000144.html  SHOP_10K_000159480526000007.html
apps/data-engine/samples/golden/: DDOG_composite_pit_replay.json  DDOG_supply_chain_edges.json
apps/data-engine/samples/moomoo/: DDOG.json  DUOL.json  NICE.json  SHOP.json  owner_plate.json
apps/data-engine/samples/nport/: ARKK_NPORT_000094040026012617.xml  ARKK_NPORT_000094040026025084.xml  QQQ_NPORT_000106783926000016.xml  QQQ_NPORT_000106783926000024.xml
apps/data-engine/samples/prices/: ADM_prices_3y_20260712.csv  DDOG_prices_1y.csv  DDOG_prices_3y_20260712.csv  DUOL_prices_1y.csv  DUOL_prices_3y_20260712.csv  JPM_prices_3y_20260712.csv  META_prices_5y_20260712.csv  NICE_prices_1y.csv  NICE_prices_3y_20260712.csv  NVDA_prices_3y_20260712.csv  PLUG_prices_3y_20260712.csv  SHOP_prices_1y.csv  SHOP_prices_3y_20260712.csv  independent_reconciliation.v1.json  twelve_data_reconciliation_20260714.json
apps/data-engine/samples/sec/: DDOG_CIK0001561550.json  DUOL_CIK0001562088.json  META_CIK0001326801.json  NICE_CIK0001003935.json  NVDA_CIK0001045810.json  PLUG_CIK0001093691.json  (+1 more)
apps/data-engine/scripts/: audit_strategy_samples.py  bootstrap_universe.py  capture_factor_matrix_samples.py  capture_fundamental_samples.py  capture_strategy_evidence.py  datahub_quality_report.py  doctor_ingest.py  materialize_production_topt_core.py  probe_etf_holdings.py  probe_moomoo_capabilities.py  probe_moomoo_nonus.py  pull_10k_text.py  pull_price_samples.py  pull_sec_samples.py  query_production_topt_datahub.py  report_topt_confidence.py  run_capture_control.py  run_direct_pe_qlib_smoke.py  run_production_topt_capture.py  run_strategy_smoke.py  run_topt_capture.py  setup_vps_ingest.sh  sweep_moomoo_fundamentals.py  sweep_sec_facts.py
apps/data-engine/tests/: test_capture_manifest_builder.py  test_capture_observations.py  test_capture_repository.py  test_capture_runs.py  test_capture_source_results.py  test_continuous_confidence.py  test_contract_assets.py  test_contract_repository.py  test_core_strategy_replay_assets.py  test_core_strategy_replay_mart_asset.py  test_core_strategy_replay_mart_migration.py  test_dagster_defs.py  test_direct_pe_qlib_smoke.py  test_factor_matrix_sample_capture.py  test_financial_facts_assets.py  test_financial_facts_pipeline.py  test_headcount_extraction.py  test_instrument_data_plane.py  test_issue58_additive_probe.py  test_kg_integration.py  test_moomoo_call.py  test_moomoo_ledger.py  test_moomoo_normalizer.py  test_mvp_filing_document.py  test_mvp_probe.py  test_nport.py  test_raw_store.py  test_schema_contract_drift.py  test_sec_companyfacts_normalizer.py  test_sec_filings_normalizer.py  test_sec_financial_facts.py  test_smoke.py  test_strategy_backtest_asset.py  test_strategy_backtest_gateway.py  test_strategy_replay_repository.py  test_strategy_sample_quality.py  test_strategy_smoke.py  test_topt_capture_scope.py  test_topt_identity.py  test_universe.py  (+1 more)
apps/llm-service/: Dockerfile  pyproject.toml
apps/llm-service/tests/: test_health.py  test_mcp_server.py
libs/contracts/: pyproject.toml
libs/contracts/conformance/: export_issue58.py  issue58.fixtures.json  issue58.schemas.json  strategy_run_parity.json
libs/contracts/tests/: test_access.py  test_capture.py  test_capture_contracts.py  test_capture_control.py  test_catalog.py  test_confidence.py  test_conversations.py  test_conversations_db_contract.py  test_data_quality.py  test_datahub.py  test_documents.py  test_documents_db_contract.py  test_evaluation_protocol.py  test_evidence_graph.py  test_execution.py  test_gates.py  test_market.py  test_metrics.py  test_models.py  test_obligation_reason_codes.py  test_policy_bundle.py  test_public_api.py  test_qlib_expression.py  test_readiness.py  test_reconciliation.py  test_registries.py  test_release.py  test_research.py  test_research_cards.py  test_research_report.py  test_research_report_mart.py  test_service_demand.py  test_strategy.py  test_strategy_run.py  test_strategy_run_parity_conformance.py  test_strategy_run_postgres.py  test_topt_read.py  test_universe.py  test_usage.py
libs/factors/: pyproject.toml
libs/factors/qlib-runtime/: pyproject.toml
libs/factors/tests/: test_confidence.py  test_gross_profit_per_employee.py  test_price_to_sales.py  test_registered_composite_probe.py  test_registered_semantic_probe.py  test_registry.py  test_strategy_evaluator.py  test_three_tier_valuation.py
libs/runtime/: README.md  pyproject.toml
libs/runtime/tests/: test_agent_preflight.py  test_app_deploy_request.py  test_ci_workflows.py  test_delivery_governance.py  test_gate0_candidate.py  test_issue_reconciliation.py  test_production_evidence_policy.py  test_runtime.py
(+787 files in other folders)
