[project]
name = "truealpha-data-engine"
version = "0.1.0"
description = "Ingestion: source adapters into Postgres raw schema. Phase -1: local sampling scripts; dlt + Dagster arrive in Phase 0/1."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "truealpha-factors",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
truealpha-factors = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_engine"]
