[project]
name = "truealpha-data-engine"
version = "0.1.0"
description = "Ingestion: source adapters into Postgres raw schema. Phase -1: local sampling scripts; dlt + Dagster arrive in Phase 0/1."
requires-python = ">=3.12"
dependencies = [
    "dagster==1.13.12",
    # The deployed webserver role (`dagster-webserver -m data_engine.dagster_defs`,
    # infra2 20.data_engine/compose.yaml) needs the UI package; pinned to the same
    # version as dagster so the daemon and webserver load identical code.
    "dagster-webserver==1.13.12",
    # dagster.yaml stores run/event/schedule metadata in the `dagster` Postgres
    # schema (DagsterPostgresStorage); the daemon fails to start without it. The
    # Dagster integration libs use the 0.(N+16).x scheme, so core 1.13.12 pairs
    # with 0.29.12.
    "dagster-postgres==0.29.12",
    "httpx>=0.27.0",
    "moomoo-api>=10.8.6808",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.2.0",
    "truealpha-contracts",
    "truealpha-factors",
    "truealpha-runtime",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
truealpha-contracts = { workspace = true }
truealpha-factors = { workspace = true }
truealpha-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_engine"]
