[project]
name = "truealpha-contracts"
version = "0.1.0"
description = "Cross-module data and repository contracts for point-in-time ingestion and backtesting."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truealpha_contracts"]
