[project]
name = "truealpha-factors"
version = "0.1.0"
description = "The single implementation of the seven analytics modules (init.md Section 7). data-engine and llm-service import from here — computation logic exists in exactly one place."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factors"]
