[project]
name = "truealpha-runtime"
version = "0.1.0"
description = "Runtime dependency, configuration, health, and object-storage boundary for TrueAlpha."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.2.0",
    "truealpha-contracts",
]

[project.scripts]
truealpha-runtime = "truealpha_runtime.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
truealpha-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truealpha_runtime"]
