[project]
name = "truealpha-qlib-runtime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyqlib==0.9.7",
    "truealpha-factors",
]

[tool.uv.sources]
truealpha-factors = { path = "..", editable = true }

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]
